ZumZumFinancials_Dev1/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accountshop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this an Accountshop organisation?</description>
        <inlineHelpText>Tick if this Is an Accountshop organisation</inlineHelpText>
        <label>Accountshop ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Reference__c</fullName>
        <label>Additional Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BACS_Ref__c</fullName>
        <label>BACS Ref</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Debit__c -  Credit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Name__c</fullName>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_No__c</fullName>
        <description>The organisation&apos;s bank account number</description>
        <inlineHelpText>Enter the organisation&apos;s bank account number</inlineHelpText>
        <label>Bank Account No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Address__c</fullName>
        <description>The organisation&apos;s bank address</description>
        <inlineHelpText>Enter the organisation&apos;s bank address</inlineHelpText>
        <label>Bank Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Sort_Code__c</fullName>
        <label>Bank Sort Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_name__c</fullName>
        <description>Organisation&apos;s bank name</description>
        <inlineHelpText>Enter the organisations bank name</inlineHelpText>
        <label>Bank Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Reg_No__c</fullName>
        <description>The company registration number if a limited company</description>
        <inlineHelpText>Enter the company registration number if a limited company</inlineHelpText>
        <label>Co Reg No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>ECSL Region</label>
        <picklist>
            <picklistValues>
                <fullName>ETHIOPIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ÅLAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA AND BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA, PLURINATIONAL STATE OF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entity_Email__c</fullName>
        <description>Entity&apos;s main email address</description>
        <inlineHelpText>Enter entity&apos;s main email address</inlineHelpText>
        <label>Entity Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominal_Account__c</fullName>
        <label>Nominal Account</label>
        <referenceTo>Nominal_Account__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Days__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Payment Due Days</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Basic organisation relationship to RDI</description>
        <inlineHelpText>Select the organisation&apos;s relationship(s) to RDI</inlineHelpText>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statutory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SO_Amount__c</fullName>
        <description>Standing order amount</description>
        <inlineHelpText>Enter standing order amount</inlineHelpText>
        <label>SO Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_Start__c</fullName>
        <description>Standing order start date or the date changed SO is effective from</description>
        <inlineHelpText>Enter the standing order start date or the date the changed SO is effective from</inlineHelpText>
        <label>SO Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Settlement_Discount__c</fullName>
        <label>Settlement Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Settlement_Due_Days__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Settlement Due Days</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>The site name for this organisation if there are multiple locations</description>
        <inlineHelpText>Enter a site name for this organisation instance, if there are multiple locations</inlineHelpText>
        <label>Site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <description>Sort code if this is a bank</description>
        <inlineHelpText>Enter the sort code if this is a bank</inlineHelpText>
        <label>Sort Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <referenceTo>Tax_Rate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terms_Agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terms Agreed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <defaultValue>&quot;30 Days Strictly Net&quot;</defaultValue>
        <label>Terms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Default_Tax_for_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Tax for Sales?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_Reg_No__c</fullName>
        <description>Entity&apos;s VAT Registration Number if VAT registered</description>
        <inlineHelpText>Enter the entity&apos;s VAT Registration Number if VAT registered</inlineHelpText>
        <label>VAT Reg No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mtdPurchases__c</fullName>
        <defaultValue>3489.00</defaultValue>
        <label>mtdPurchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>mtdRevenue__c</fullName>
        <defaultValue>2400.50</defaultValue>
        <label>mtdRevenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ytdPurchases__c</fullName>
        <defaultValue>87690.00</defaultValue>
        <label>ytdPurchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ytdRevenue__c</fullName>
        <defaultValue>55000.00</defaultValue>
        <label>ytdRevenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <namedFilters>
        <fullName>nf_01I900000003OTFEA2_00N90000001qAF8EAM</fullName>
        <active>true</active>
        <field>Purchase_Invoice__c.Account__c</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Purchase Invoice_Supplier Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I900000003OTHEA2_00N90000001qAFZEA2</fullName>
        <active>true</active>
        <field>Purchase_Order__c.Account__c</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Purchase Order_Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I900000003OTQEA2_00N90000001qAGREA2</fullName>
        <active>true</active>
        <field>Sales_Invoice__c.Account__c</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Sales Invoice_Customer Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I900000003OTSEA2_00N90000001qAGrEAM</fullName>
        <active>true</active>
        <field>Sales_Order__c.Account__c</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Sales Order_Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I900000003jMwEAI_00N90000002LGY2EAO</fullName>
        <active>true</active>
        <field>RecurringTransaction__c.Customer_Account__c</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>RecurringTransaction_Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I900000003pqYEAQ_00N90000002KbueEAC</fullName>
        <active>true</active>
        <field>CustomerLookup__c.CustomerAccount__c</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>CustomerLookup_CustomerAccount</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I900000003pqYEAQ_00N90000002KbuoEAC</fullName>
        <active>true</active>
        <field>CustomerLookup__c.SupplierAccount__c</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>CustomerLookup_SupplierAccount</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I900000003ydhEAA_00N90000002KwTQEA0</fullName>
        <active>true</active>
        <field>DataTypeHelper__c.Supplier_Account__c</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>DataTypeHelper_Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I900000003ydhEAA_00N90000002L4WEEA0</fullName>
        <active>true</active>
        <field>DataTypeHelper__c.Customer_Account__c</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>DataTypeHelper_Customer Account</name>
    </namedFilters>
</CustomObject>